# Binary-Tree

./: CMakeLists.txt  README.md  tests.cpp
BinaryTreeHeader/: BinaryTree.h  CMakeLists.txt
Graphviz/: Three_Three_output.txt  Tree_Five_output.txt  Tree_Four_output.txt  Tree_One_output.txt  Tree_Six_output.txt  Tree_Two_output.txt
